--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
         </form>
         <ul class="task-list" id="task-list"></ul> 
     </div>
+    <script src="./app.js"></script>
+
 </body>
 </html>
